# internal/http_handler/swagger_docs/restricted_docs.go
@@ -368,11 +368,7 @@ const docTemplaterestricted = `{
                 1000000,
                 1000000000,
                 60000000000,
-                3600000000000,
-                1,
-                1000,
-                1000000,
-                1000000000
+                3600000000000
             ],
             "x-enum-varnames": [
                 "minDuration",
@@ -382,11 +378,7 @@ const docTemplaterestricted = `{
                 "Millisecond",
                 "Second",
                 "Minute",
-                "Hour",
-                "Nanosecond",
-                "Microsecond",
-                "Millisecond",
-                "Second"
+                "Hour"
             ]
         }
     }
@@ -396,7 +388,7 @@ const docTemplaterestricted = `{
 var SwaggerInforestricted = &swag.Spec{
 	Version:          "",
 	Host:             "",
-	BasePath:         "/restricted",
+	BasePath:         "/",
 	Schemes:          []string{},
 	Title:            "Secret Manager Restricted API",
 	Description:      "Provides access to secret management functions.",
