# internal/http_handler/swagger_docs/restricted_swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /restricted
+basePath: /
 definitions:
   api_model.Secret:
     properties:
@@ -50,10 +50,6 @@ definitions:
     - 1000000000
     - 60000000000
     - 3600000000000
-    - 1
-    - 1000
-    - 1000000
-    - 1000000000
     type: integer
     x-enum-varnames:
     - minDuration
@@ -64,10 +60,6 @@ definitions:
     - Second
     - Minute
     - Hour
-    - Nanosecond
-    - Microsecond
-    - Millisecond
-    - Second
 info:
   contact: {}
   description: Provides access to secret management functions.
